# stock-alerts

./: .env.example  .gitignore  Procfile  README.md  app.py  bot.js  db_manager.py  fix_production_sequences.py  fix_sequences.sql  package-lock.json  package.json  periodic_checker.py  pre_deploy.sh  pyproject.toml  railway.json  requirements.txt  run_migrations.py  setup.cfg  setup_webhook.py  start.bat  start.sh  stock_alerts.db  test.sh  test_db.py  tsconfig.json  webhook_handler.py
.github/workflows/: stock-alerts.yml
database/: __init__.py  connection_manager.py  database_manager.py
database/repositories/: __init__.py  alert_repository.py  stock_repository.py  system_repository.py  user_repository.py
db/: stockalerts.db
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  SETUP.md  TROUBLESHOOTING.md  api-docs.md  architecture.md  requirements.md  watchlist.md
docs/feature/: WEBHOOK_SECURITY.md
features/: __init__.py  periodic_checker.py  webhook_handler.py
migrations/: 000_migrations_table.sql  001_fresh_start.sql  001_initial.sql  002_increase_watchlist_limit.sql  002_trading_stats_cache.sql  003_increase_watchlist_limit_to_50.sql  003_rate_limiting.sql  004_add_position_tracking.sql  004_fix_missing_users.sql  005_fix_foreign_key_constraint.sql  006_fix_user_id_type.sql  007_fix_sequences.sql
routes/: __init__.py  admin_routes.py  api_routes.py  health_routes.py  webhook_routes.py
services/: __init__.py  admin_service.py  auth_service.py  notification_service.py  stock_service.py
static/css/: style.css
static/js/: api.js  chart.js  main.js  main.js.map  ui.js
static/ts/: main.ts
templates/: about.html  admin.html  index.html  telegram.html
type_definitions/: __init__.py  api_types.py  stock_types.py  user_types.py
utils/: __init__.py  config.py  json_encoder.py  rate_limiter.py  scheduler.py  tiingo_client.py  validators.py
